# q-tensor-3d

./: .gitignore  HELP.md  README.md  compute.py  compute_terms.py  config.py  const.py  constants.py  eigen.cpp  eigen.py  energycomps.py  eqndata.py  extractor.py  firedrakeplus.py  loaddump.py  logging_test.py  main.py  mesh.py  misc.py  newsave.py  nondim.py  order_data.py  plot.py  printoff.py  pyproject.toml  q-tensor-3d.py  qmesh  qsave  qtensor3d  saves.py  settings.py  setup.cfg  sym.py  sympyext.py  sympyplus.py  uflcache.py  userexpr.py  userexpression.py  valuecheck.py
default_yml/: userexpr.yml
defaults/: constants.yml  settings.yml  userexpr.yml
firedrakeplus/: check.py  computation.py  eqnglobals.py  fy.py  mesh.py  solver.py  vis.py
geo/: HollowedCube.GEO  LavrentovichShell.GEO  Shell.GEO  Slab.GEO  ZoomedSlab.GEO  cube.GEO  sphere.GEO
help/: settings_help.txt
q3d/: compute.py  compute_terms.py  config.py  misc.py  plot.py  printoff.py  saves.py  uflcache.py  ufloperatorsplus.py  userexpr.py
q3d/firedrakeplus/: __init__.py  check.py  computation.py  eqnglobals.py  functionspacedata.py  fy.py  math.py  mesh.py  solver.py  vis.py
q3d/uflcache/: __init__.py
q3d/uflcache/userexpr/: __init__.py  sympy_objects.py  ufl_objects.py
q3d/uflplus/: __init__.py  domain.py  fy.py  other.py  overwrites.py
scripts/: qic  qmesh  qnondim  qsave  qtensor3d  quflcache
scripts_legacy/: extractor.py  nondim.py
scripts_paraview/: programmable_filter.py
scripts_shell/: q-tensor-3d-install.sh
