[metadata]
name = q3d
author = Andrew Hicks
author_email = andrew.hicksm@gmail.com
description = An implementation of the Landau-de Gennes Q-tensor model for liquid crystals
long_description = file: README.md, HELP.md, LICENSE.md
keywords = 
license = 
classifiers = 
    Programming Language :: Python :: 3
    Operating System :: Linux

[options]
python_requires = >=3.8
install_requires =
    sympyplus
    mymesh
    pyyaml